# MARS

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-plz.toml  rust-toolchain.toml
crates/adapters/mars-definition-source-configmap/: Cargo.toml
crates/adapters/mars-definition-source-configmap/src/: lib.rs  tests.rs
crates/adapters/mars-definition-source-git/: Cargo.toml
crates/adapters/mars-definition-source-git/src/: auth.rs  fetch.rs  lib.rs  tests.rs
crates/adapters/mars-definition-source-inline/: Cargo.toml
crates/adapters/mars-definition-source-inline/src/: lib.rs  tests.rs
crates/adapters/mars-definition-source-s3/: Cargo.toml
crates/adapters/mars-definition-source-s3/src/: lib.rs  tests.rs
crates/adapters/mars-definition-source-s3/tests/: garage_definition_source.rs
crates/adapters/mars-render/: Cargo.toml
crates/adapters/mars-render/benches/: draw_encode.rs  hatch.rs
crates/adapters/mars-render/src/: canvas.rs  decoded_image.rs  encode.rs  lib.rs  path.rs  path_offset.rs  polyline.rs  prepare.rs  raster.rs  surface.rs  tests.rs
crates/adapters/mars-source-postgres/: Cargo.toml
crates/adapters/mars-source-postgres/src/: bootstrap.rs  compile_session.rs  eval_sql_parity_tests.rs  fetch.rs  leader.rs  lib.rs  lower.rs  quote.rs  replication.rs
crates/adapters/mars-source-postgres/tests/: bootstrap_integration.rs  eval_sql_parity.rs  fetch_by_feature_ids_e2e.rs  fetch_by_feature_ids_integration.rs  fetch_full_table_e2e.rs  fetch_full_table_integration.rs  geometry_variants_integration.rs  leader_lock_e2e.rs  leader_lock_integration.rs  replication_e2e.rs  replication_integration.rs  sql_compile_session_integration.rs  stream_rows_by_id_integration.rs  stream_rows_integration.rs
crates/adapters/mars-source-vectorfile/: Cargo.toml
crates/adapters/mars-source-vectorfile/src/: cache.rs  change_feed.rs  error.rs  fetch.rs  fragment.rs  lib.rs  reproject.rs  tests.rs
crates/adapters/mars-source-vectorfile/tests/: wiremock_http_decode.rs
crates/adapters/mars-source-xyz/: Cargo.toml
crates/adapters/mars-source-xyz/src/: lib.rs  tests.rs
crates/adapters/mars-source-xyz/tests/: wiremock_read_tile.rs
crates/adapters/mars-store-fs/: Cargo.toml
crates/adapters/mars-store-fs/benches/: cache.rs
crates/adapters/mars-store-fs/src/: cache.rs  key.rs  lib.rs  manifest.rs  mmap.rs  store.rs  tests.rs
crates/adapters/mars-store-fs/tests/: cache_eviction_under_concurrent_leaders.rs
crates/adapters/mars-store-s3/: Cargo.toml
crates/adapters/mars-store-s3/src/: config.rs  lib.rs  manifest.rs  store.rs  tests.rs
crates/adapters/mars-store-s3/tests/: garage_manifest_non_atomic.rs  garage_object_store.rs  inmemory_cas.rs
crates/application/mars-compiler/: Cargo.toml
crates/application/mars-compiler/benches/: decimation.rs  decode.rs  page_rebuild.rs
crates/application/mars-compiler/src/: class.rs  class_eval.rs  decimate.rs  disk_governor.rs  error.rs  external_sort.rs  hilbert.rs  incremental.rs  labels.rs  lib.rs  memory_governor.rs  page_plan.rs  plan.rs  polylabel.rs  rebalance.rs  rebuild.rs  reconcile.rs  render.rs  route_index.rs  scratch_codec.rs  service.rs  sidecar.rs  sidecar_arena.rs  snapshot.rs  snapshot_pipeline.rs  sources.rs  spill.rs  testing.rs  wkb.rs
crates/application/mars-compiler/tests/: ack_loop.rs  compile_full_scan.rs  cycle_parallelism.rs  governor_backpressure.rs  incremental_boundary_dedup.rs  multi_band_dedupe.rs  rebalance_drift.rs  service_loop.rs  sidecar_atomicity.rs  snapshot.rs  surgical_invalidation.rs  unified_compile.rs
crates/application/mars-runtime/: Cargo.toml
crates/application/mars-runtime/benches/: feature_prep.rs  label_collision.rs  manifest_swap.rs  render.rs  render_e2e.rs
crates/application/mars-runtime/src/: budget.rs  decode.rs  decoded.rs  draw.rs  error.rs  exceptions.rs  fetch.rs  gfi.rs  images.rs  key.rs  labels.rs  legend.rs  lib.rs  plan.rs  reload.rs  render.rs  state.rs  test_fixtures.rs
crates/domain/mars-artifact/: Cargo.toml  FORMAT.md  build.rs
crates/domain/mars-expr/: Cargo.toml
crates/domain/mars-grid/: Cargo.toml
crates/domain/mars-style/: Cargo.toml
crates/domain/mars-types/: Cargo.toml
crates/interfaces/mars-http/: Cargo.toml
crates/interfaces/mars-ows-common/: Cargo.toml
crates/interfaces/mars-wms/: Cargo.toml
crates/interfaces/mars-wmts/: Cargo.toml
crates/support/mars-config/: Cargo.toml
crates/support/mars-observability/: Cargo.toml
crates/support/mars-proj/: Cargo.toml
crates/support/mars-text/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_artifact_reader.rs  fuzz_target_expr_parser.rs  fuzz_target_text_template.rs
harness/topology-simplifier/: Cargo.toml  PHASE0_GATE.md  README.md
harness/topology-simplifier/src/: dp.rs  graph.rs  imagediff.rs  ingest.rs  main.rs  reassemble.rs  timing.rs  verify.rs
tests/e2e/: Cargo.toml  README.md  compose.yml  docker-compose.yml  fixture-loader.sh  kind.yaml.tmpl  mars.compose.yaml
tests/e2e/k3d/: fixture-loader.yaml  garage.yaml  manifest-current-check-job.yaml  mars.yaml  namespace.yaml  postgis.yaml  s3-preflight-job.yaml
tests/e2e/manifests/: fixture-loader-no-replication.yaml.tmpl  fixture-loader.yaml.tmpl  garage.yaml.tmpl  marsservice-bootstrap.yaml.tmpl  marsservice.yaml.tmpl  mutate-source.yaml.tmpl  operator-values.yaml  postgis.yaml.tmpl  seaweedfs.yaml.tmpl
tests/e2e/quadlets/: mars-e2e-compiler.kube  mars-e2e-config.kube  mars-e2e-fixture-loader.kube  mars-e2e-postgis.kube  mars-e2e-runtime.kube  mars-e2e.network
tests/e2e/scripts/: fetch-fixture.sh
tests/e2e/sql/: mutate-source.sql  synthetic-pattern.sql  synthetic-poi.sql
tests/e2e/src/: cluster.rs  deploy.rs  fixtures.rs  garage.rs  http.rs  lib.rs  metrics.rs  namespace.rs  wait.rs
tests/e2e/tests/: e2e_suite.rs
tests/parity/: Cargo.toml
tests/parity/scripts/: fetch-fixture.sh
tests/parity/src/: lib.rs
tests/parity/tests/: osm.rs
(+575 files in other folders)
