[workspace]
resolver = "2"
members = [
    "crates/domain/mars-types",
    "crates/domain/mars-grid",
    "crates/domain/mars-expr",
    "crates/domain/mars-style",
    "crates/domain/mars-artifact",
    "crates/ports/mars-source",
    "crates/ports/mars-store",
    "crates/ports/mars-render-port",
    "crates/adapters/mars-source-postgres",
    "crates/adapters/mars-store-s3",
    "crates/adapters/mars-store-fs",
    "crates/adapters/mars-render",
    "crates/application/mars-compiler",
    "crates/application/mars-runtime",
    "crates/interfaces/mars-wms",
    "crates/interfaces/mars-wmts",
    "crates/interfaces/mars-http",
    "crates/support/mars-config",
    "crates/support/mars-observability",
    "crates/support/mars-proj",
    "crates/support/mars-text",
    "bin/mars",
    "bin/mars-import-mapfile",
    "bin/mars-compile",
    "bin/mars-bin-shared",
    "bin/mars-diff-capture",
]

# fuzz crate excluded from workspace builds: it requires nightly + libfuzzer
# linker flags. Run via `cargo +nightly fuzz run <target>`; see fuzz/README.md.
exclude = [
    "fuzz",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/forn-dk/mars"
authors = ["MARS contributors"]
publish = false

[workspace.dependencies]
# domain primitives
mars-types          = { path = "crates/domain/mars-types" }
mars-grid           = { path = "crates/domain/mars-grid" }
mars-expr           = { path = "crates/domain/mars-expr" }
mars-style          = { path = "crates/domain/mars-style" }
mars-artifact       = { path = "crates/domain/mars-artifact" }
# ports
mars-source         = { path = "crates/ports/mars-source" }
mars-store          = { path = "crates/ports/mars-store" }
mars-render-port    = { path = "crates/ports/mars-render-port" }
# adapters
mars-source-postgres = { path = "crates/adapters/mars-source-postgres" }
mars-store-s3        = { path = "crates/adapters/mars-store-s3" }
mars-store-fs        = { path = "crates/adapters/mars-store-fs" }
mars-render          = { path = "crates/adapters/mars-render" }
# application
mars-compiler       = { path = "crates/application/mars-compiler" }
mars-runtime        = { path = "crates/application/mars-runtime" }
# interfaces
mars-wms            = { path = "crates/interfaces/mars-wms" }
mars-wmts           = { path = "crates/interfaces/mars-wmts" }
mars-http           = { path = "crates/interfaces/mars-http" }
# support
mars-config         = { path = "crates/support/mars-config" }
mars-observability  = { path = "crates/support/mars-observability" }
mars-proj           = { path = "crates/support/mars-proj" }
mars-text           = { path = "crates/support/mars-text" }
# bin-only shared composition wiring (see bin/mars-bin-shared)
mars-bin-shared     = { path = "bin/mars-bin-shared" }

# third-party (single source of truth)
async-trait         = "0.1"
thiserror           = "2"
serde               = { version = "1", features = ["derive", "rc"] }
serde_json          = "1"
tokio               = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "net"] }
tokio-util          = { version = "0.7", features = ["rt"] }
clap                = { version = "4", features = ["derive", "env"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "fmt"] }
futures-core        = "0.3"
futures-util        = "0.3"
bytes               = "1"
anyhow              = "1"
arc-swap            = "1"
tempfile            = "3"
temp-env            = "0.3"
proptest            = "1"
serde_yaml_ng       = "0.10"
rand                = "0.8"
png                 = "0.18"
zune-jpeg           = "0.5"
hashlink            = "0.10"
hashbrown           = "0.15"
parking_lot         = "0.12"
memmap2             = "0.9"
tokio-postgres          = "0.7"
tokio-postgres-rustls   = "0.13"
rustls-native-certs     = "0.8"
rustls                  = "0.23"
prometheus          = "0.14"
libfuzzer-sys       = "0.4"
object_store        = { version = "0.13", default-features = false, features = ["aws"] }
criterion           = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
rustybuzz           = "0.20"
fontdb              = { version = "0.23", default-features = false }
tiny-skia           = "0.12"
rstar               = "0.12"
rayon               = "1.12"

[workspace.lints.rust]
unsafe_code              = "deny"
unreachable_pub          = "warn"
rust_2024_compatibility  = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
unwrap_used              = "warn"
expect_used              = "warn"
panic                    = "warn"
todo                     = "warn"
dbg_macro                = "warn"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

# inherits release; bumped to fat lto. driven by scripts/build-pgo.sh in both
# the profile-generate and profile-use stages.
[profile.release-pgo]
inherits      = "release"
lto           = "fat"

# release-grade codegen with debuginfo retained. used by mars-diff-capture's
# --profile-case mode: release strips symbols, leaving pprof-rs with only
# libc dyn symbols to resolve against -> flamegraphs reduce to a single
# clone() stub. keep debuginfo + the static symbol table here so frame
# addresses resolve back to MARS / Rust stdlib functions.
[profile.profiling]
inherits      = "release"
debug         = "full"
strip         = "none"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
