[workspace]
resolver = "2"
members = [
    "crates/domain/mars-types",
    "crates/domain/mars-grid",
    "crates/domain/mars-expr",
    "crates/domain/mars-style",
    "crates/domain/mars-artifact",
    "crates/ports/mars-source",
    "crates/ports/mars-store",
    "crates/ports/mars-render-port",
    "crates/adapters/mars-source-postgres",
    "crates/adapters/mars-source-vectorfile",
    "crates/adapters/mars-source-xyz",
    "crates/adapters/mars-store-s3",
    "crates/adapters/mars-store-fs",
    "crates/adapters/mars-render",
    "crates/application/mars-compiler",
    "crates/application/mars-runtime",
    "crates/interfaces/mars-ows-common",
    "crates/interfaces/mars-wms",
    "crates/interfaces/mars-wmts",
    "crates/interfaces/mars-http",
    "crates/support/mars-config",
    "crates/support/mars-observability",
    "crates/support/mars-proj",
    "crates/support/mars-text",
    "crates/testing/mars-test-support",
    "bin/mars",
    "bin/mars-import-mapfile",
    "bin/mars-compile",
    "bin/mars-bin-shared",
    "bin/mars-operator",
]

# fuzz crate excluded from workspace builds: it requires nightly + libfuzzer
# linker flags. Run via `cargo +nightly fuzz run <target>`; see fuzz/README.md.
# tests/e2e is the kind-based e2e suite; pulls in kube + k8s-openapi which we
# don't want in default `cargo test --workspace`. invoked via scripts/run-e2e.sh.
# tests/parity anchors rendering against external reference goldens; needs a
# docker daemon plus a local dump. invoked via scripts/run-parity.sh.
exclude = [
    "fuzz",
    "tests/e2e",
    "tests/parity",
]

[workspace.package]
# placeholder. CI patches this to the tag at build time during release.yml.
# never bump in a PR; cut a release with scripts/release.sh and the workflow
# rewrites cargo + chart versions in the runner.
version = "0.0.0-dev"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bhark/MARS"
authors = ["MARS contributors"]
publish = false

[workspace.dependencies]
# domain primitives
mars-types          = { path = "crates/domain/mars-types" }
mars-grid           = { path = "crates/domain/mars-grid" }
mars-expr           = { path = "crates/domain/mars-expr" }
mars-style          = { path = "crates/domain/mars-style" }
mars-artifact       = { path = "crates/domain/mars-artifact" }
# ports
mars-source         = { path = "crates/ports/mars-source" }
mars-store          = { path = "crates/ports/mars-store" }
mars-render-port    = { path = "crates/ports/mars-render-port" }
# adapters
mars-source-postgres = { path = "crates/adapters/mars-source-postgres" }
mars-source-vectorfile = { path = "crates/adapters/mars-source-vectorfile" }
mars-source-xyz      = { path = "crates/adapters/mars-source-xyz" }
mars-store-s3        = { path = "crates/adapters/mars-store-s3" }
mars-store-fs        = { path = "crates/adapters/mars-store-fs" }
mars-render          = { path = "crates/adapters/mars-render" }
# application
mars-compiler       = { path = "crates/application/mars-compiler" }
mars-runtime        = { path = "crates/application/mars-runtime" }
# interfaces
mars-ows-common     = { path = "crates/interfaces/mars-ows-common" }
mars-wms            = { path = "crates/interfaces/mars-wms" }
mars-wmts           = { path = "crates/interfaces/mars-wmts" }
mars-http           = { path = "crates/interfaces/mars-http" }
# support
mars-config         = { path = "crates/support/mars-config" }
mars-observability  = { path = "crates/support/mars-observability" }
mars-proj           = { path = "crates/support/mars-proj" }
mars-text           = { path = "crates/support/mars-text" }
# testing
mars-test-support   = { path = "crates/testing/mars-test-support" }
# bin-only shared composition wiring (see bin/mars-bin-shared)
mars-bin-shared     = { path = "bin/mars-bin-shared" }

# third-party (single source of truth)
anyhow              = "1.0.102"
arc-swap            = "1.9.1"
async-trait         = "0.1.89"
axum                = "0.8.9"
blake3              = "1.8.5"
bytes               = "1.11.1"
clap                = { version = "4.6.1", features = ["derive", "env"] }
criterion           = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
deadpool-postgres   = "0.14.1"
fallible-streaming-iterator = "0.1.9"
# pinned to a version whose libsqlite3-sys req overlaps proj-sys 0.27.x
# (which also declares `links = "sqlite3"`); bumping rusqlite past 0.36 here
# requires lifting the proj-sys floor in lockstep. bundled feature compiles
# SQLite from source so the workspace doesn't grow a system-sqlite runtime
# dep.
rusqlite            = { version = "0.37.0", default-features = false, features = ["bundled"] }
# default features pull in reqwest/http for direct fetching; we use object_store
# for transport, so only the bytes integration is needed.
flatgeobuf          = { version = "6.0.1", default-features = false, features = ["bytes"] }
flate2              = "1.1.9"
fontdb              = { version = "0.23.0", default-features = false }
# geo-types is the bridge type the shapefile crate hands geometries through
# on its way to geozero's WKB writer. version is pinned to the range
# shapefile 0.8 accepts and what geozero 0.15 ships against transitively.
geo-types           = { version = "0.7.19", default-features = false }
futures-core        = "0.3.32"
futures-util        = "0.3.32"
geozero             = { version = "0.15.1", default-features = false, features = ["with-wkb", "with-geojson", "with-geo"] }
hashbrown           = "0.17.1"
hashlink            = "0.11.0"
humantime           = "2.3.0"
image-webp          = "0.2.4"
jpeg-decoder        = "0.3.2"
jpeg-encoder        = "0.7.0"
k8s-openapi         = { version = "0.27.1", default-features = false, features = ["v1_31"] }
kube                = { version = "3.1.0", default-features = false, features = ["client", "runtime", "derive", "rustls-tls", "ring"] }
kube-lease-manager  = "0.11.1"
libfuzzer-sys       = "0.4.12"
memmap2             = "0.9.10"
object_store        = { version = "0.13.2", default-features = false, features = ["aws", "gcp", "http", "fs"] }
parking_lot         = "0.12.5"
percent-encoding    = "2.3.2"
pgwire-replication  = "0.3.2"
planus              = "1.3.0"
planus-codegen      = "1.3.0"
planus-translation  = "1.3.0"
png                 = "0.18.1"
pprof               = { version = "0.15.0", default-features = false, features = ["flamegraph", "protobuf-codec"] }
proptest            = "1.11.0"
prometheus          = "0.14.0"
proj-sys            = "0.27.0"
quick-xml           = "0.40.1"
rand                = "0.10.1"
regex               = "1.12.3"
reqwest             = { version = "0.13.3", default-features = false }
rustls              = "0.23.40"
rustls-native-certs = "0.8.3"
rustybuzz           = "0.20.1"
rstar               = "0.12.2"
schemars            = "1.2.1"
serde               = { version = "1.0.228", features = ["derive", "rc"] }
serde_json          = "1.0.149"
serde_yaml_ng       = "0.10.0"
# shapefile decoder for mars-source-vectorfile; geo-types feature enables
# the Shape -> geo_types::Geometry conversion path that geozero lowers to WKB.
shapefile           = { version = "0.8.0", default-features = false, features = ["geo-types"] }
sha2                = "0.11.0"
temp-env            = "0.3.6"
tempfile            = "3.27.0"
testcontainers      = "0.27.3"
thiserror           = "2.0.18"
tiny-skia           = "0.12.0"
tokio               = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "net"] }
tokio-postgres      = "0.7.17"
tokio-postgres-rustls = "0.13.0"
tokio-util          = { version = "0.7.18", features = ["rt"] }
tower               = "0.5.3"
tower-http          = { version = "0.6.10", features = ["trace", "timeout", "limit", "cors"] }
tracing             = "0.1.44"
tracing-subscriber  = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
wiremock            = "0.6.5"
# zip carrier for the shapefile decoder: one binding fetches a single archive
# bundling .shp + .shx + .dbf (+ optional .prj). default features pull bzip2
# / zstd / xz; deflate is the only compressor real shapefile bundles use.
zip                 = { version = "8.6.0", default-features = false, features = ["deflate"] }
zune-jpeg           = "0.5.15"
rayon               = "1.12.0"

[workspace.lints.rust]
unsafe_code              = "deny"
unreachable_pub          = "warn"
rust_2024_compatibility  = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
unwrap_used              = "warn"
expect_used              = "warn"
panic                    = "warn"
todo                     = "warn"
dbg_macro                = "warn"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

# inherits release; bumped to fat lto. driven by scripts/build-pgo.sh in both
# the profile-generate and profile-use stages.
[profile.release-pgo]
inherits      = "release"
lto           = "fat"

[profile.dev]
opt-level = 0
# line tables only - backtraces stay accurate but test binaries shrink and link
# faster. drop to "none" if you don't need backtraces at all.
debug     = "line-tables-only"

[profile.test]
opt-level = 1
debug     = "line-tables-only"
