[package]
name    = "mars-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

# standalone (not part of the parent workspace) so cargo-fuzz nightly + linker
# flags do not bleed into the main build. Build with `cargo +nightly fuzz run`.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
mars-artifact = { path = "../crates/domain/mars-artifact" }
mars-expr     = { path = "../crates/domain/mars-expr" }
bytes         = "1.11.1"

[[bin]]
name              = "fuzz_target_artifact_reader"
path              = "fuzz_targets/fuzz_target_artifact_reader.rs"
test              = false
doc               = false
bench             = false

[[bin]]
name              = "fuzz_target_expr_parser"
path              = "fuzz_targets/fuzz_target_expr_parser.rs"
test              = false
doc               = false
bench             = false

[[bin]]
name              = "fuzz_target_text_template"
path              = "fuzz_targets/fuzz_target_text_template.rs"
test              = false
doc               = false
bench             = false
