[package]
name    = "topology-simplifier"
version = "0.0.0"
edition = "2024"
publish = false

# standalone workspace: this harness is operator-driven, not part of the
# main MARS workspace. mirrors the fuzz/ pattern. run via:
#   cargo run --release --manifest-path harness/topology-simplifier/Cargo.toml -- ...
[workspace]

[dependencies]
mars-artifact = { path = "../../crates/domain/mars-artifact" }
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
hex           = "0.4"
tiny-skia     = "0.12"
png           = "0.18"

[[bin]]
name = "topology-simplifier"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all          = { level = "warn", priority = -1 }
unwrap_used  = "warn"
expect_used  = "warn"
panic        = "warn"
todo         = "warn"
dbg_macro    = "warn"
