# Excluded from the root [workspace] (see /Cargo.toml `exclude`). The kind-
# based e2e suite needs `kind`, `helm`, `kubectl`, and a docker daemon, none
# of which `cargo test --workspace` should pull in. Run via
# `scripts/run-e2e.sh` from the repo root.
[workspace]
members = []

[package]
name        = "mars-e2e-kind"
version     = "0.0.0-dev"
edition     = "2024"
license     = "MIT OR Apache-2.0"
publish     = false
autotests   = false
description = "kind-based end-to-end suite for MARS: deploys the operator chart, a MarsService, and the seaweedfs + postgis dependencies into a kind cluster, then asserts production-equivalent behaviour."

[lib]
path = "src/lib.rs"

[[test]]
name = "e2e_suite"
path = "tests/e2e_suite.rs"

[features]
default = []

[dependencies]
anyhow            = "1"
async-trait       = "0.1"
bytes             = "1"
futures-util      = "0.3"
http              = "1"
http-body-util    = "0.1"
k8s-openapi       = { version = "0.27", features = ["v1_31"] }
kube              = { version = "3.1", default-features = false, features = ["client", "runtime", "derive", "rustls-tls", "ring"] }
mars-test-support = { path = "../../crates/testing/mars-test-support" }
prometheus-parse  = "0.2"
rand              = "0.10"
serde             = { version = "1", features = ["derive"] }
serde_yaml_ng     = "0.10"
tempfile          = "3"
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
unsafe_code              = "deny"
unreachable_pub          = "warn"

[lints.clippy]
all                      = { level = "warn", priority = -1 }
unwrap_used              = "warn"
expect_used              = "warn"
panic                    = "warn"
todo                     = "warn"
dbg_macro                = "warn"
