[package]
name        = "mars-definition-source-git"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "Git mars-definition-source adapter. Fetches a RenderDefinition payload from a git repo (HTTPS basic / HTTPS bearer / SSH key, optional mTLS) and polls for commit-SHA deltas."

[lints]
workspace = true

[dependencies]
mars-definition-source = { workspace = true }
async-trait            = { workspace = true }
bytes                  = { workspace = true }
futures-core           = { workspace = true }
futures-util           = { workspace = true }
git2                   = { workspace = true }
sha2                   = { workspace = true }
tempfile               = { workspace = true }
thiserror              = { workspace = true }
tokio                  = { workspace = true }
tokio-stream           = { workspace = true }
tracing                = { workspace = true }

[features]
default = []
# live remote integration tests (gitea container etc.); future PRs land tests
# behind this flag, mirroring the mars-source-postgres / mars-store-s3 pattern.
# kept as an empty marker today so cargo test --features integration is green.
integration = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
