[package]
name        = "mars-definition-source-inline"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "Inline-literal mars-definition-source adapter. Captures a RenderDefinition payload at construction and serves it back unchanged."

[lints]
workspace = true

[dependencies]
mars-definition-source = { workspace = true }
async-trait            = { workspace = true }
blake3                 = { workspace = true }
bytes                  = { workspace = true }
futures-core           = { workspace = true }
futures-util           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
