[package]
name        = "mars-definition-source-s3"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "S3-compatible object store mars-definition-source adapter. Fetches a RenderDefinition payload via object_store and polls for ETag deltas."

[lints]
workspace = true

[dependencies]
mars-definition-source = { workspace = true }
async-trait            = { workspace = true }
bytes                  = { workspace = true }
futures-core           = { workspace = true }
futures-util           = { workspace = true }
object_store           = { workspace = true }
thiserror              = { workspace = true }
tokio                  = { workspace = true }
tokio-stream           = { workspace = true }
tracing                = { workspace = true }

[features]
default = []
# garage-backed integration tests under `tests/garage_definition_source.rs`;
# mirrors mars-store-s3 + mars-source-postgres. off by default so plain
# `cargo test` skips docker.
integration = []

[dev-dependencies]
tokio             = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
mars-test-support = { workspace = true, features = ["docker"] }
object_store      = { workspace = true, features = ["aws"] }
bytes             = { workspace = true }
