[package]
name        = "mars-render"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "CPU rasteriser implementation of mars-render-port::Renderer (tiny-skia + rustybuzz + cosmic-text)."

[lints]
workspace = true

[dependencies]
mars-render-port = { workspace = true }
mars-style       = { workspace = true }
mars-text        = { workspace = true }
tracing          = { workspace = true }
tiny-skia        = "0.12"
png              = { workspace = true }
jpeg-encoder     = "0.6"

[dev-dependencies]
png              = { workspace = true }
jpeg-decoder     = "0.3"
criterion        = { workspace = true }

[[bench]]
name    = "draw_encode"
harness = false
