[package]
name        = "mars-render"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "CPU rasteriser implementation of mars-render-port::Renderer (tiny-skia + rustybuzz)."

# criterion only; libtest harness rejects --save-baseline
[lib]
bench = false

[lints]
workspace = true

[dependencies]
mars-render-port = { workspace = true }
mars-style       = { workspace = true }
mars-text        = { workspace = true }
tracing          = { workspace = true }
tiny-skia        = { workspace = true }
png              = { workspace = true }
jpeg-encoder     = { workspace = true }
image-webp       = { workspace = true }

[dev-dependencies]
png              = { workspace = true }
jpeg-decoder     = { workspace = true }
criterion        = { workspace = true }

[[bench]]
name    = "draw_encode"
harness = false

[[bench]]
name    = "hatch"
harness = false
