[package]
name        = "mars-source-postgres"
version     = "0.0.1"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
description = "PostgreSQL adapter for mars-source: pgoutput logical decoding plus a polling fallback. Owns SQL lowering for mars-expr ASTs."

[lints]
workspace = true

[features]
default = []
# Polling-mode fallback for sources where logical decoding cannot be enabled.
# SPEC §8.2.2 - second-class but supported.
polling = []
# E2E tests that spin up a postgis container via testcontainers. Optional
# because docker is not always available; default `cargo test` skips them.
e2e = ["dep:testcontainers"]

[dependencies]
mars-source = { workspace = true }
mars-types  = { workspace = true }
mars-expr   = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
thiserror   = { workspace = true }
bytes       = { workspace = true }
tracing     = { workspace = true }
tokio-postgres     = "0.7"
deadpool-postgres  = "0.14"
# optional, gated behind `e2e` feature; lives under [dependencies] because
# cargo does not allow optional [dev-dependencies].
testcontainers = { version = "0.20", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
