[package]
name        = "mars-source-postgres"
version.workspace = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
publish.workspace     = true
rust-version.workspace = true
description = "PostgreSQL adapter for mars-source: pgoutput logical decoding. Owns SQL lowering for mars-expr ASTs."

[lints]
workspace = true

[features]
default = []
# Integration tests that spin up a postgis container via testcontainers.
# Optional because docker is not always available; default `cargo test` skips
# them.
integration = ["dep:testcontainers"]

[dependencies]
mars-source   = { workspace = true }
mars-types    = { workspace = true }
mars-expr     = { workspace = true }
mars-grid     = { workspace = true }
mars-artifact = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bytes       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio          = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres      = { workspace = true }
tokio-postgres-rustls  = { workspace = true }
rustls-native-certs    = { workspace = true }
rustls                 = { workspace = true }
# logical replication client. owns pgwire framing, SCRAM/MD5 auth, TLS, and
# CopyBoth/standby-status handling; mars-source-postgres owns the pgoutput
# decoder + translator that consume `XLogData` payload bytes.
pgwire-replication     = { workspace = true }
tokio-util             = { workspace = true }
# optional, gated behind `e2e` feature; lives under [dependencies] because
# cargo does not allow optional [dev-dependencies].
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
rand = { workspace = true }
mars-test-support = { workspace = true, features = ["docker"] }
